--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dk.cphbusiness</groupId>
-    <artifactId>jwtBackend</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Backend</artifactId>
+    <version>1.0</version>
     <packaging>war</packaging>
 
-    <name>jwtBackend</name>
+    <name>Backend</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
