changes in app.json + package.json

--- a/AppClient/app.json
+++ b/AppClient/app.json
@@ -1,5 +1,7 @@
 {
   "expo": {
-    "sdkVersion": "26.0.0"
+	"name": "Seed App",
+    "sdkVersion": "26.0.0",
+	"description": "Seed App for use with Seed Project",
   }
 }
