--- a/Web Client/package.json
+++ b/Web Client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "jsonwebtoken": "^8.2.1",
     "react": "^16.3.1",
+    "react-calendar": "^2.14.0",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
@@ -16,5 +17,4 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
-  
 }
