--- a/Car-Rental-API/conf/application.properties
+++ b/Car-Rental-API/conf/application.properties
@@ -1,11 +1,11 @@
 # Server Configurations
-server.port=8080
+server.port=8085
 
 # Initial Data File Locations Used By Data Seeder
 schwertz.car-data=../conf/cars.xml
 
 # Relational Database Integration Configurations
-spring.datasource.url=jdbc:mysql://XXXXXXXX:3306/car_rental?useUnicode=true&amp;characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://XXX.XXX.XXX.XXX:3306/car_rental?useUnicode=true&amp;characterEncoding=utf8
 spring.datasource.username=XXXXXXXXX
 spring.datasource.password=XXXXXXXXX
 
