--- a/Car-Rental-API/src/car-rental-service/src/main/resources/application.properties
+++ b/Car-Rental-API/src/car-rental-service/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 server.port=8080
 
 # Initial Data File Locations Used By Data Seeder
-schwertz.car-data=../conf/cars.xml
+schwertz.car-data=/home/mani/Workspace/Projects/Schwertz/Car Rental Service/Development/car-rental-service/src/main/resources/cars.xml
 
 # Relational Database Integration Configurations
 spring.datasource.url=jdbc:mysql://localhost:3306/car_rental?useUnicode=true&amp;characterEncoding=utf8
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=rai.mani
 
 # ORM Configurations
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
