--- a/Web Client/package.json
+++ b/Web Client/package.json
@@ -2,7 +2,7 @@
   "name": "login-frontend",
   "version": "0.1.0",
   "private": true,
-  "serverURL": "https://www.ramsbone.dk/backend/CA3",
+  "serverURL": "http://localhost:8084/jwtbackend",
   "dependencies": {
     "jsonwebtoken": "^8.2.1",
     "react": "^16.3.1",
